--- a/scss/modules/_banner.scss
+++ b/scss/modules/_banner.scss
@@ -55,6 +55,8 @@ Banner:
     background-color: map-get($color-map, web-design);
     border-color: map-get($color-map, web-design);
     font-size: 1.25rem;
+    letter-spacing: 0.5px;
+    font-weight: 400;
 
     &:hover {
       background-color: darken(map-get($color-map, web-design), 10%);
@@ -70,6 +72,7 @@ Banner:
     }
 
     .arrow-right:before {
+      margin-left: 5px;
       font-family: icomoon !important;
       font-style: normal;
       font-weight: 400;
@@ -78,6 +81,7 @@ Banner:
       content: "\ea3c";
     }
   }
+
   @include s-e(nav) {
     flex: 1 0 calc(70% - 20px);
 
